--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,35 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;COLOQUE AQUI A SUA PLATAFORMA DE DESENVOLVIMENTO
+[platformio] 
+env_default = megaatmega2560
+
+;CONFIGURAÇÕES PARA O ATMEGA2560
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
 upload_port = COM[6]
+
+;CONFIGURAÇÕES PARA O STM32F103CB
+[env:genericSTM32F103CB]
+platform = ststm32
+board = genericSTM32F103CB
+framework = arduino
+upload_protocol = stlink
+debug_tool = stlink
+monitor_speed = 115200
+board_build.core = stm32
+upload_port = COM[7]
+
+;CONFIGURAÇÕES PARA O STM32F407VE
+[env:black_f407ve]
+platform = ststm32
+board = black_f407ve
+upload_protocol = stlink
+debug_tool = stlink
+monitor_speed = 115200
+board_build.core = stm32
+upload_port = COM[7]
