--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,7 @@ upload_port = COM[7]
 [env:black_f407ve]
 platform = ststm32
 board = black_f407ve
+framework = arduino
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
