atualizar platform.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,10 +20,10 @@ framework = arduino
 monitor_speed = 115200
 upload_port = COM[6]
 
-;CONFIGURAÇÕES PARA O STM32F411CEU6
-[env:genericSTM32F411CE]
+;CONFIGURAÇÕES PARA O STM32F103CBT6
+[env:genericSTM32F103CB]
 platform = ststm32
-board = genericSTM32F411CE
+board = genericSTM32F103CB
 framework = arduino
 upload_protocol = stlink
 debug_tool = stlink
