iniciar construção para o esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 ;COLOQUE AQUI A SUA PLATAFORMA DE DESENVOLVIMENTO
 [platformio] 
-default_envs = megaatmega2560
+default_envs = esp32dev
 
 ;CONFIGURAÇÕES PARA O ATMEGA2560
 [env:megaatmega2560]
@@ -19,6 +19,14 @@ board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
 upload_port = COM[6]
+
+;CONFIGURAÇÕES PARA O ESP32
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+upload_port = COM[7]
 
 ;CONFIGURAÇÕES PARA O STM32F103CBT6
 [env:genericSTM32F103CB]
