--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 ;COLOQUE AQUI A SUA PLATAFORMA DE DESENVOLVIMENTO
 [platformio] 
-default_envs = esp32dev
+default_envs = genericSTM32F103CB
 
 ;CONFIGURAÇÕES PARA O ATMEGA2560
 [env:megaatmega2560]
