construção das extensões cpp e h da camada de abstração do stm32

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 ;COLOQUE AQUI A SUA PLATAFORMA DE DESENVOLVIMENTO
 [platformio] 
-default_envs = megaatmega2560
+default_envs = esp32dev
 
 ;CONFIGURAÇÕES PARA O ATMEGA2560
 [env:megaatmega2560]
@@ -26,17 +26,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-upload_port = COM[7]
-
-;CONFIGURAÇÕES PARA O STM32F103CBT6
-[env:genericSTM32F103CB]
-platform = ststm32
-board = genericSTM32F103CB
-framework = arduino
-upload_protocol = stlink
-debug_tool = stlink
-monitor_speed = 115200
-board_build.core = stm32
 upload_port = COM[7]
 
 ;CONFIGURAÇÕES PARA O STM32F407VE
