pequenas modificações para o stm32

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,13 +28,23 @@ framework = arduino
 monitor_speed = 115200
 upload_port = COM[7]
 
+[env:bluepill_f103c8_128k]
+platform = ststm32
+board = bluepill_f103c8_128k
+board_build.mcu = stm32f103c8t6
+board_build.f_cpu = 72000000L
+framework = arduino
+upload_protocol = serial	
+monitor_speed = 115200	
+board_build.core = stm32	
+upload_port = COM[8]
+
 ;CONFIGURAÇÕES PARA O STM32F407VE
 [env:black_f407ve]
 platform = ststm32
 board = black_f407ve
 framework = arduino
 upload_protocol = stlink
-debug_tool = stlink
 monitor_speed = 115200
 board_build.core = stm32
-upload_port = COM[7]
+upload_port = COM[]
