reorganizar as funções e corrigir a escrita

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ framework = arduino
 monitor_speed = 115200
 upload_port = COM[7]
 
+;CONFIGURAÇÕES PARA O STM32F103C8T6
 [env:bluepill_f103c8_128k]
 platform = ststm32
 board = bluepill_f103c8_128k
