[FailSafe]Use o buzzer para indicar que o fail-safe foi ativado ou cancelado

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,4 +48,4 @@ framework = arduino
 upload_protocol = stlink
 monitor_speed = 115200
 board_build.core = stm32
-upload_port = COM[]
+upload_port = COM[8]
