adicioanar pasta tools

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,14 @@
 [platformio] 
 default_envs = megaatmega2560
 
+;ALGORITIMO PRINCIPAL
+src_dir = src
+
+;TESTES
+;src_dir = Tools/TaskTest
+
+lib_dir = .
+
 ;CONFIGURAÇÕES PARA O ATMEGA2560
 [env:megaatmega2560]
 platform = atmelavr
