novos algoritimos de testes e exemplos na pasta 'Tools',novos parametros de configurações pelo gcs,entre outros...

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,7 @@ default_envs = megaatmega2560
 src_dir = src
 
 ;TESTES
-;src_dir = Tools/TaskTest
-
+;src_dir = Tools/BlackBoxTest
 lib_dir = .
 
 ;CONFIGURAÇÕES PARA O ATMEGA2560
