--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ default_envs = megaatmega2560
 src_dir = src
 
 ;TESTES
-;src_dir = Tools/DJINazaGPSTest
+;src_dir = Tools/BiquadFilterTest
 lib_dir = .
 
 ;CONFIGURAÇÕES PARA O ATMEGA2560
