--- a/Settings.yaml
+++ b/Settings.yaml
@@ -1,3 +1,8 @@
+  /******************************************VARIAVIES DO GRUPO RADIO******************************************/
+  kkkk tem nada ainda,preguiça de fazer essa lista,vai dar um trabalho chato
+
+  /******************************************VARIAVIES DO GRUPO PID******************************************/
+
   Variavel: ReferenceAirSpeed
   Valor Min: 1
   Valor Max: 5000
