--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ cache:
     - "~/.platformio"
 
 env:
-  - PLATFORMIO_CI_SRC = src/main.cpp
+  - PLATFORMIO_CI_SRC = src
 
 install:
   - pip install -U platformio
