--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ install:
 
 script:
   - platformio run
-  - pio ci --board=megaatmega2560 --board=esp32dev --board=bluepill_f103c8_128k --lib="."
+  - export PLATFORMIO_BUILD_FLAGS=-D GLOBAL_MACROS_FOR_ALL_TEST_ENV
