Atualizar platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio] 
-default_envs = megaatmega2560
-
+[platformio]
 ;ALGORITIMO PRINCIPAL
 src_dir = src
 
@@ -18,24 +16,24 @@ src_dir = src
 ;src_dir = Tools/ABGFilterTest
 lib_dir = .
 
-;CONFIGURAÇÕES PARA O ATMEGA2560
-[env:megaatmega2560]
+[env]
 platform = atmelavr
-board = megaatmega2560
 framework = arduino
+board = megaatmega2560
 monitor_speed = 115200
 upload_port = COM[6]
 
-;CONFIGURAÇÕES PARA O ESP32
-[env:esp32dev]
+[env:JCFlightExtreme]
+
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_port = COM[7]
 
+[env:JCFlightPascal]
+
 ;CONFIGURAÇÕES PARA O STM32F103C8T6
-[env:bluepill_f103c8_128k]
 platform = ststm32
 board = bluepill_f103c8_128k
 board_build.mcu = stm32f103c8t6
@@ -46,12 +44,14 @@ monitor_speed = 115200
 board_build.core = stm32	
 upload_port = COM[8]
 
+[env:JCFlightClassic]
+
 ;CONFIGURAÇÕES PARA O STM32F407VE
-[env:black_f407ve]
-platform = ststm32
-board = black_f407ve
-framework = arduino
-upload_protocol = stlink
-monitor_speed = 115200
-board_build.core = stm32
-upload_port = COM[8]
+;[env:black_f407ve]
+;platform = ststm32
+;board = black_f407ve
+;framework = arduino
+;upload_protocol = stlink
+;monitor_speed = 115200
+;board_build.core = stm32
+;upload_port = COM[8]
