--- a/.github/workflows/Stale.yml
+++ b/.github/workflows/Stale.yml
@@ -17,15 +17,13 @@ jobs:
         days-before-close: 7
         stale-issue-message: >
           Este problema foi automaticamente marcado como obsoleto porque
-          não teve atividade recente.Ele será fechado se nenhuma outra atividade ocorrer
-          Dentro de uma semana.
+          não teve atividade recente.Ele será fechado se nenhuma outra atividade ocorrer dentro de uma semana.
         close-issue-message: 'Problema fechado automaticamente como inativo.'        
         exempt-issue-labels: 'BUG,Solicitação de recurso'
         stale-issue-label: 'Inativo'
         stale-pr-message: >
-         Esta solicitação pull foi marcada automaticamente como obsoleta porque
-          não teve atividade recente.Ele será fechado se nenhuma outra atividade ocorrer
-          Dentro de uma semana.
+          Esta solicitação pull foi marcada automaticamente como obsoleta porque
+          não teve atividade recente.Ele será fechado se nenhuma outra atividade ocorrer dentro de uma semana.
         close-pr-message: 'Solicitação pull fechada automaticamente como inativa.'
         exempt-pr-labels: 'Fixado'
         stale-pr-label: 'Inativo'
