Incluir todos os parametros de configuração do TECS para o GCS

--- a/platformio.ini
+++ b/platformio.ini
@@ -45,14 +45,13 @@ upload_protocol = serial
 monitor_speed = 115200	
 upload_port = COM[8]
 
-[env:JCFlightClassic]
-
-;CONFIGURAÇÕES PARA O STM32F407VE
-;[env:black_f407ve]
+;CONFIGURAÇÕES PARA O STM32F411
 ;platform = ststm32
-;board = black_f407ve
+;board = genericSTM32F411CE
 ;framework = arduino
 ;upload_protocol = stlink
 ;monitor_speed = 115200
 ;board_build.core = stm32
 ;upload_port = COM[8]
+
+[env:JCFlightClassic]
